# SimpleCOM

./: CMakeLists.txt  SimpleCOM.cpp  SimpleCOM.h  SimpleCOM.idl  SimpleCOM.rc.in  SimpleCOM.vbs  TestAggregation.cpp  TestClient.cpp  dllmain.cpp  dupatlbase.h  register.bat.in  unregister.bat.in  xdlldata.h
